test/scc/stmt/semantic-errors/011.t
void test()
{
    do
        default:
            ;
    while (0);
}